--- a/client/style.css
+++ b/client/style.css
@@ -6,6 +6,8 @@
 
 body {
     width: 100%;
+    background-image: url("chicken.png");
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,9 +87,16 @@ input:focus {
 .chicken {
     background-size: cover;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-items: center;
-    justify-content: center;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    /* justify-items: center; */
+    /* justify-content: center; */
     z-index: -1;
+}
+
+#welcome {
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
