--- a/client/style.css
+++ b/client/style.css
@@ -4,23 +4,45 @@
     font-family: "Space Mono", monospace;
 }
 
-body {
-    width: 100%;
-    background-image: url("chicken.png");
+h1 {
+    font-size: 60px;
+}
+
+.title {
+    position: relative;
+    top: 1vh;
+}
+
+.chicken {
+    background-image: url("/chicken.png");
     background-repeat: no-repeat;
+    background-position: 0% 0%;
+}
+
+#welcome {
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-.chickenImage {
-    max-width: 600px;
-    height: auto;
-    width: 100%;
-    z-index: -1;
+.link {
+    position: relative;
+    top: 8vh;
+    /* left: 2vw; */
+}
+
+.inputs {
+    position: relative;
+    top: 3vh;
 }
 
 .button-83 {
+    position: relative;
+    top: 3vh;
+    /* left: 2vw; */
     appearance: button;
     background-color: transparent;
     background-image: linear-gradient(to bottom, #fff, #f8eedb);
@@ -71,32 +93,42 @@ input {
     border-left: none;
     background-color: rgba(0, 0, 0, 0);
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 input:focus {
     outline: none;
 }
 
-#chickenImage {
-    width: 50%;
-    height: 50%;
+.profilePic {
+    border: black 2px solid;
+    border-radius: 25%;
+    height: 6vh;
+    width: 6vh;
+    position: relative;
+    top: 1vh;
+    right: 1vw;
 }
 
-.chicken {
-    background-size: cover;
-    display: flex;
-    /* flex-direction: row; */
-    /* align-items: center; */
-    /* justify-items: center; */
-    /* justify-content: center; */
-    z-index: -1;
+.topElement {
+    /* top: 1vh; */
+    width: 100%;
+    height: 8vh;
+    background-color: rgb(211, 206, 206);
 }
 
-#welcome {
-    height: 600px;
+.insideElements {
+    height: 6vh;
+    position: relative;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hamburger {
+    position: relative;
+    top: 1vh;
+    left: 0vw;
+    height: 12vh;
+    width: 12vh;
 }
