--- a/client/style.css
+++ b/client/style.css
@@ -107,6 +107,7 @@ input:focus {
     position: relative;
     top: 1vh;
     right: 1vw;
+    object-fit: cover;
 }
 
 .topElement {
@@ -131,4 +132,44 @@ input:focus {
     left: 0vw;
     height: 12vh;
     width: 12vh;
+}
+
+.mainProfilePic {
+    border: black 2px solid;
+    position: relative;
+    top: 5vh;
+    width: 30%;
+    height: 57vh;
+    border-radius: 50%;
+    padding: 4px;
+    object-fit: cover;
+}
+
+.imageContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
+.imageName {
+    position: relative;
+    top: 70vh;
+}
+
+.linkButton {
+    position: relative;
+    top: 20vh;
+}
+
+.bio {
+    position: relative;
+    top: 17vh;
+}
+
+.textArea {
+    position: relative;
+    top: 17vh;
 }
