--- a/client/style.css
+++ b/client/style.css
@@ -5,13 +5,7 @@
 }
 
 h1 {
-    font-size: 60px;
-}
-
-.title {
-    position: relative;
-    top: 1vh;
-    left: -15%;
+    font-size: 45px;
 }
 
 .chicken {
@@ -27,12 +21,6 @@ h1 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-}
-
-.link {
-    position: relative;
-    top: 8vh;
-    /* left: 2vw; */
 }
 
 .inputs {
@@ -112,7 +100,6 @@ input:focus {
 }
 
 .topElement {
-    /* top: 1vh; */
     width: 100%;
     height: 8vh;
     background-color: rgb(211, 206, 206);
@@ -139,27 +126,52 @@ input:focus {
 .mainProfilePic {
     border: black 7px solid;
     position: relative;
-    top: 5vh;
+    /* top: 3vh; */
     width: 30%;
     height: 400px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     padding: 4px;
     object-fit: cover;
 }
 
 .imageContainer {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-items: center;
+    align-items: center;
+    position: relative;
+    top: 35px;
+}
+
+.inputField {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.imageName {
+.titleBird {
+    text-align: center;
+    position: relative;
+    top: 30px;
+}
+
+.dateAndTime {
+    font-style: italic;
+    font-size: 12px;
+}
+
+.nameOf {
+    font-style: oblique;
+}
+
+.message {
+    font-size: 20px;
+}
+
+/* .imageName {
     position: relative;
     top: 55vh;
-}
+} */
 
 .linkButton {
     position: relative;
@@ -196,7 +208,6 @@ input:focus {
 }
 
 .findProfilePic {
-    /* border: black 7px solid; */
     position: relative;
     top: 5vh;
     width: 60%;
@@ -218,4 +229,119 @@ input:focus {
     top: 25vh;
     height: 30%;
     width: 50%;
+}
+
+.side-nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.modal {
+    background-color: salmon;
+    position: relative;
+    top: -400px;
+    z-index: 1000;
+    height: 200px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+.bioEditor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.yourProfilePic {
+    border: black 7px solid;
+    position: relative;
+    width: 30%;
+    height: 50vh;
+    border-radius: 25%;
+    padding: 4px;
+    object-fit: cover;
+}
+
+.editText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-between;
+    justify-content: center;
+    height: 200px;
+}
+
+.textArea {
+    order: 2;
+}
+
+.wannabees {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    top: 7vh;
+}
+
+.accept {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titleProfile {
+    font-size: 40px;
+}
+
+.messageBox {
+    height: 25vh;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: space-between;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.outerBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chatImage {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.friendImage {
+    border-radius: 25%;
+}
+
+.bio {
+    font-size: 30px;
+}
+
+.editTextBio {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-items: center;
+    /* align-items: center; */
+    /* align-content: space-between; */
+    /* justify-content: center; */
+    height: 200px;
+}
+
+.bio {
+    position: relative;
+    top: 10px;
 }
