--- a/client/style.css
+++ b/client/style.css
@@ -24,6 +24,10 @@ h1 {
 }
 
 .inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     position: relative;
     top: 3vh;
 }
@@ -34,14 +38,14 @@ h1 {
     /* left: 2vw; */
     appearance: button;
     background-color: transparent;
-    background-image: linear-gradient(to bottom, #fff, #f8eedb);
     border: 0 solid #e5e7eb;
     border-radius: 0.5rem;
     box-sizing: border-box;
-    color: #482307;
     column-gap: 1rem;
     cursor: pointer;
     display: flex;
+    width: 210px;
+    text-align: center;
     font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
         Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
@@ -52,7 +56,6 @@ h1 {
     margin: 0;
     outline: 2px solid transparent;
     padding: 1rem 1.5rem;
-    text-align: center;
     text-transform: none;
     transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
     user-select: none;
@@ -82,6 +85,8 @@ input {
     border-left: none;
     background-color: rgba(0, 0, 0, 0);
     display: flex;
+    position: relative;
+    top: -3vh;
 }
 
 input:focus {
@@ -91,8 +96,8 @@ input:focus {
 .profilePic {
     border: black 2px solid;
     border-radius: 25%;
-    height: 6vh;
-    width: 6vh;
+    height: 7.5vh;
+    width: 7.5vh;
     position: relative;
     top: 1vh;
     right: 1vw;
@@ -193,6 +198,8 @@ input:focus {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     text-align: center;
+    position: relative;
+    top: 5vh;
 }
 
 .userPhoto {
@@ -203,8 +210,8 @@ input:focus {
 
 .searchQuery {
     position: relative;
-    left: 1vh;
-    top: 2vh;
+    left: 3vh;
+    top: 6vh;
 }
 
 .findProfilePic {
@@ -235,6 +242,17 @@ input:focus {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     justify-items: center;
+    border: black 2px solid;
+    box-shadow: 4px 4px 2px 1px;
+    width: 1200px;
+    height: 60px;
+    align-items: center;
+    font-size: 20px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
 }
 
 .modal {
@@ -299,13 +317,14 @@ input:focus {
 }
 
 .messageBox {
-    height: 25vh;
-    width: 30%;
+    height: 30vh;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     justify-items: center;
     align-items: center;
+
     align-content: space-between;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
